--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div id="experience" class="background-alt">
     <h2 class="heading">Experience</h2>
     <div id="experience-timeline">
-        <div data-date="September 2015 – September 2016">
+        <div data-date="September 2022 – September 2023">
             <h3>Employer Name</h3>
             <h4 class="job-title">Job Title</h4>
             <p>
@@ -81,7 +81,7 @@
             </p>
         </div>
 
-        <div data-date="September 2015 – September 2016">
+        <div data-date="September 2023 – September 2024">
             <h3>Employer Name</h3>
             <h4 class="job-title">Job Title</h4>
             <p>
@@ -89,7 +89,7 @@
             </p>
         </div>
 
-        <div data-date="September 2015 – September 2016">
+        <div data-date="September 2024 – September 2025">
             <h3>Employer Name</h3>
             <h4 class="job-title">Job Title</h4>
             <p>
@@ -104,7 +104,7 @@
     <h2 class="heading">Education</h2>
     <div class="education-block">
         <h3>University of Ottawa</h3>
-        <span class="education-date">Sept 2016 - Sept 2017</span>
+        <span class="education-date">Sept 2024 - Sept 2025</span>
         <h4>Bachelor of Science in Computer Science</h4>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
@@ -114,7 +114,7 @@
 
     <div class="education-block">
         <h3>University of Ottawa</h3>
-        <span class="education-date">Sept 2016 - Sept 2017</span>
+        <span class="education-date">Sept 2024 - Sept 2025</span>
         <h4>Bachelor of Science in Computer Science</h4>
         <ul>
             <li>
@@ -222,7 +222,7 @@
         <div class="row">
             <div class="col-sm-5 copyright">
                 <p>
-                    Copyright &copy; 2023 YOUR NAME
+                    Copyright &copy; 2025 RYAN FITZGERALD
                 </p>
             </div>
             <div class="col-sm-2 top">
